<resources>
    <!-- <string name=""></string> -->

    <!-- global -->
    <string name="MOM_SERVER">http://192.168.0.15:8000/api</string>
    <string name="Global_Err_networkUnavailable">Network is unavailable.</string>
    <string name="Global_Err_unknown">Something wrong happened.</string>
    <string name="global_NIY">Not implemented yet!</string>

    <!-- Default -->
    <string name="app_name">Mom</string>
    <string name="action_settings">Settings</string>

    <!-- Login -->
    <string name="Login_login">E-mail</string>
    <string name="Login_password">Password</string>
    <string name="Login_connect">Connect</string>
    <string name="Login_Err_emptyField">Please fill both field</string>
    <string name="Login_Err_wrongCredential">Wrong credential !</string>
    <string name="Login_register">Register</string>
    <string name="Login_googleConnectionError">Cannot connect to google</string>

    <!-- Main Screen -->
    <string name="MainScreen_settings">Settings</string>
    <string name="title_activity_main_screen">Events</string>

    <!-- Main Event -->
    <string name="MainEvent_tasks">Tasks</string>
    <string name="MainEvent_date">Date : %s</string>
    <string name="MainEvent_place">Place : %s</string>
    <string name="MainEvent_writeStatus">New status</string>
    <string name="title_activity_main_event">Event</string>
    <string name="MainEvent_accept">Accept</string>
    <string name="MainEvent_decline">Decline</string>
    <string name="MainEvent_invitation">Invitation</string>


    <!-- Event Creation -->
    <string name="EventCreation_name">Event name</string>
    <string name="EventCreation_date">Date</string>
    <string name="EventCreation_place">Place</string>
    <string name="EventCreation_description">Description</string>
    <string name="EventCreation_create">Create</string>
    <string name="title_activity_event_creation">New event</string>
    <string name="EventCreation_empty">You can\'t send an event without a name!</string>
    <string name="EventCreation_error">Something wrong happened.</string>

    <!-- Invitation view -->
    <string name="Invite_send">Send</string>

    <!-- TaskCreation -->
    <string name="TaskCreation_Create">Create</string>
    <string name="TaskCreation_taskName">Task name</string>
    <string name="TaskCreation_taskDescription">Description</string>
    <string name="title_activity_task_creation">New task</string>
    <string name="TaskCreation_empty">You cant\'t send a task with an empty name!</string>
    <string name="TaskCreation_error">Something wrong happened.</string>

    <!-- WriteMessage -->
    <string name="WriteMessage_send">Post</string>
    <string name="WriteMessage_eventStatusCreationSubTitle">New status</string>
    <string name="WriteMessage_taskCommentSubTitle">New comment</string>
    <string name="title_activity_write_message">Write message</string>
    <string name="WriteMessage_hint">Write a message…</string>
    <string name="WriteMessage_errorEmptyMessage">Can\'t send an empty message.</string>

    <!-- TaskGlobal -->
    <string name="TaskGlobal_nPersonnes">Personnes</string>
    <string name="TaskGlobal_join">Join</string>
    <string name="TaskGlobal_quit">Quit</string>
    <string name="TaskGlobal_createSubTask">Add a checklist item</string>
    <string name="TaskGlobal_createComment">Add a comment</string>
    <string name="title_activity_task_global">Task</string>
    <string name="TaskGlobal_error">Something wrong happened.</string>
    <string name="TaskGlobal_Comments">Comments</string>
    <string name="TaskGlobal_Checklist">Checklist</string>

    <!-- TaskList -->
    <string name="TaskList_newTask">New task</string>
    <string name="title_activity_task_list">Tasks</string>
    <string name="TaskList_error">Couldn\'t retrieve tasks.</string>

    <!-- TaskItemCreate -->
    <string name="TaskItemCreate_send">Create item</string>
    <string name="title_activity_task_item_create">Add an item</string>
    <string name="TaskItemCreate_Hint">Enter a checklist item…</string>
    <string name="TaskItemCreate_error">Something wrong happened.</string>
    <string name="TaskItemCreate_empty">You can\'t send an empty checklist item</string>

    <!-- Register -->
    <string name="Register_empty_email">Email cannot be empty</string>
    <string name="Register_different_pass">Passwords are different</string>
    <string name="Register_empty_password">Password cannot be empty</string>
    <string name="Register_error">Something wrong happened.</string>
    <string name="Register_first_name">First name</string>
    <string name="Register_email">E-mail</string>
    <string name="Register_phone">Phone number</string>
    <string name="Register_password">Password</string>
    <string name="Register_confirm">Confirm</string>
    <string name="Register_submit">Register</string>

    <!-- InvitationList -->
    <string name="title_activity_invitation_list">Invitations</string>
    <string name="Invitation_accepted">Accepted</string>
    <string name="Invitation_pending">Pending</string>
    <string name="Invitation_refused">Refused</string>
    <string name="Invitation_unknown">Unknown</string>
    <string name="InvitationList_error">Couldn\'t retrieve invitations.</string>

    <!-- Invite -->
    <string name="Invite_search">Search</string>
    <string name="Invite_message">Message</string>
    <string name="Invite_email">E-mail</string>
    <string name="Invite_email_not_found">No user has this email address.</string>
    <string name="Invite_error">Something wrong happened.</string>
    <string name="Invite_rank_error">Couldn\'t retrieve ranks</string>
    <string name="Invite_sent">Invite sent to %s.</string>
    <string name="Invite_errorSelectValidEmail">Please select a valid user email address.</string>
    <string name="Invite_errorSelectRank">Please select a rank.</string>
</resources>
