<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.richou.mom.MainEvent"
    tools:showIn="@layout/activity_main_event">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainEvent_tasks"
        android:id="@+id/button6"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainEvent_invitation"
        android:id="@+id/MainEvent_invitations"
        android:layout_toEndOf="@+id/button6"
        android:singleLine="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainEvent_accept"
        android:textColor="#ff00ff00"
        android:id="@+id/MainEvent_buttonAccept"
        android:layout_below="@+id/button6"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainEvent_decline"
        android:textColor="#ffff0000"
        android:id="@+id/MainEvent_buttonDecline"
        android:layout_below="@+id/button6"
        android:layout_toEndOf="@+id/MainEvent_buttonAccept"
        android:singleLine="false"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/MainEvent_buttonAccept"
        android:id="@+id/view" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:id="@+id/view2"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/view" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:layout_below="@+id/view2"
        android:layout_above="@+id/MainEvent_writeStatus"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EventCreation_date"
        android:textSize="18dp"
        android:id="@+id/textViewEventDate"
        android:layout_below="@+id/view"/>
        <!--android:layout_above="@+id/listView2"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EventCreation_place"
        android:textSize="18dp"
        android:id="@+id/textViewEventPlace"
        android:layout_below="@+id/textViewEventDate" />

</RelativeLayout>
