<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.richou.mom.MainEvent">

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/event_top_menu"
        android:id="@+id/include" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainEvent_tasks"
        android:id="@+id/button6"
        android:layout_below="@+id/include"
        android:layout_alignParentStart="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/button6"
        android:id="@+id/view" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:id="@+id/view2"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/view" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:layout_below="@+id/view2"
        android:layout_above="@+id/MainEvent_writeStatus"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EventCreation_date"
        android:textSize="18dp"
        android:id="@+id/textViewEventDate"
        android:layout_below="@+id/view"/>
        <!--android:layout_above="@+id/listView2"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EventCreation_place"
        android:textSize="18dp"
        android:id="@+id/textViewEventPlace"
        android:layout_below="@+id/textViewEventDate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainEvent_writeStatus"
        android:textSize="20dp"
        android:id="@+id/MainEvent_writeStatus"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Invitations"
        android:id="@+id/MainEvent_invitations"
        android:layout_below="@+id/include"
        android:layout_toEndOf="@+id/button6"
        android:singleLine="false" />

</RelativeLayout>
